--- a/p1/index.html
+++ b/p1/index.html
@@ -6,7 +6,7 @@
 		<title>Project 1</title>
 	</head>
 	<body>
-		<h1>Title of Text</h1>
-		<h2><a href="page2/index.html">Author</a> Mcauthor</h2>
+		<h1><a href="page2/index.html">Winter</a> Morning Poem</h1>
+		<h2>By Ogden Nash</h2>
 	</body>
 </html>
