--- a/p1/page10/index.html
+++ b/p1/page10/index.html
@@ -6,6 +6,6 @@
 		<title>Project 1</title>
 	</head>
 	<body>
-		<p>Turning tree stumps into <a href="../page4/index.html">snowmen</a></p>
+		<p>Snow is snowy when it’s <a href="../page11/index.html">snowing.</a></p>
 	</body>
 </html>
