--- a/p1/page2/index.html
+++ b/p1/page2/index.html
@@ -6,6 +6,6 @@
 		<title>Project 1</title>
 	</head>
 	<body>
-		<p><a href="../page3/index.html">first</a> part of the text</p>
+		<p>Winter is the king of <a href="../page3/index.html">showmen,</a></p>
 	</body>
 </html>
