--- a/p1/page6/index.html
+++ b/p1/page6/index.html
@@ -6,6 +6,6 @@
 		<title>Project 1</title>
 	</head>
 	<body>
-		<p>Turning tree stumps into <a href="../page4/index.html">snowmen</a></p>
+		<p>Smooth and clean and frosty <a href="../page7/index.html">white,</a></p>
 	</body>
 </html>
