--- a/p1/page9/index.html
+++ b/p1/page9/index.html
@@ -6,6 +6,6 @@
 		<title>Project 1</title>
 	</head>
 	<body>
-		<p>Turning tree stumps into <a href="../page4/index.html">snowmen</a></p>
+		<p>Catching snowflakes on your <a href="../page10/index.html">tongue!</a></p>
 	</body>
 </html>
