--- a/p1/page11/index.html
+++ b/p1/page11/index.html
@@ -6,6 +6,6 @@
 		<title>Project 1</title>
 	</head>
 	<body>
-		<p>Turning tree stumps into <a href="../page4/index.html">snowmen</a></p>
+		<p>I’m sorry it’s slushy when it’s going</p>
 	</body>
 </html>
