--- a/p1/page5/index.html
+++ b/p1/page5/index.html
@@ -6,6 +6,6 @@
 		<title>Project 1</title>
 	</head>
 	<body>
-		<p>Turning tree stumps into <a href="../page4/index.html">snowmen</a></p>
+		<p>And spreading sugar over <a href="../page6/index.html">lakes</a></p>
 	</body>
 </html>
