--- a/p1/page7/index.html
+++ b/p1/page7/index.html
@@ -6,6 +6,6 @@
 		<title>Project 1</title>
 	</head>
 	<body>
-		<p>Turning tree stumps into <a href="../page4/index.html">snowmen</a></p>
+		<p>The world looks good enough to <a href="../page8/index.html">bite.</a></p>
 	</body>
 </html>
