link to page 2 change

--- a/p1/page11/index.html
+++ b/p1/page11/index.html
@@ -6,6 +6,6 @@
 		<title>Project 1</title>
 	</head>
 	<body>
-		<p>I’m sorry it’s slushy when it’s going</p>
+		<p>I’m sorry it’s slushy when it’s <a href="../page2/index.html">going</a></p>
 	</body>
 </html>
