--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<h1>Camille's Work</h1>
 		<ul>
 			<li><a href="e1/index.html">E1: 20 Questions</a></li>
-			<li>E2: Make a Grid</li>
+			<li><a href="e2/index.html">E2: Make a Grid</a></li>
 			<li>E3: Organization and Naming</li>
 			<li>E4: Site Map</li>
 			<li>E5: Wireframes</li>
