--- a/e2/index.html
+++ b/e2/index.html
@@ -6,11 +6,10 @@
 	<title>E2</title>
 </head>
 	<body>
-		<img src="images/1.png" alt="shape layout 1">
-		<img src="images/2.png" alt="shape layout 2">
-		<img src="images/3.png" alt="shape layout 3">
-		<img src="images/4.png" alt="shape layout 4">
-		<img src="images/5.png" alt="shape layout 5">
-
+		<img src="images/1.png" alt="first grid of green circles">
+		<img src="images/2.png" alt="second grid of squares and triangles">
+		<img src="images/3.png" alt="third grid of squares circles triangles hexagons">
+		<img src="images/4.png" alt="fourth grid of white lines and primary color lines">
+		<img src="images/5.png" alt="fifth grid of triangle circle square pink teal colors">
 	</body>
 </html>
