--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 </head>
 	<body>
 		<h1>Camille's Work</h1>
+		<h2>Exercises</h2>
 		<ul>
 			<li><a href="e1/index.html">E1: 20 Questions</a></li>
 			<li><a href="e2/index.html">E2: Make a Grid</a></li>
-			<li>E3: Organization and Naming</li>
-			<li>E4: Site Map</li>
-			<li>E5: Wireframes</li>
+			<li><a href="e3/index.html">E3: Organization and Naming</a></li>
+			<li><a href="e4/index.html">E4: Site Map</a></li>
+			<li><a href="e5/index.html">E5: Wireframes</a></li>
 		</ul>
-
+		<h2>Projects</h2>
+		<ul>
+			<li><a href="p1/index.html">P1: Linking Narratives</a></li>
+		</ul>
 	</body>
 </html>
