--- a/e5/index.html
+++ b/e5/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 	<body>
-		<img src="images/wireframeDesktop.png" alt="wireframe desktop sketch">
-		<img src="images/wireframeMobile.png" alt="wireframe mobile sketch">
+		<img src="images/wireframe-1.png" alt="wireframe desktop sketch">
+		<img src="images/wireframe-2.png" alt="wireframe mobile sketch">
 	</body>
 </html>
