--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<li><a href="e2/index.html">E2: Make a Grid</a></li>
 			<li><a href="e3/index.html">E3: Organization and Naming</a></li>
 			<li><a href="e4/index.html">E4: Site Map</a></li>
-			<li>E5: Wireframes</li>
+			<li><a href="e5/index.html">E5: Wireframes</a></li>
 		</ul>
 		<h2>Projects</h2>
 		<ul>
