--- a/e5/index.html
+++ b/e5/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>E5</title>
+	<link rel="stylesheet" href="css/main.css">
 </head>
 	<body>
 		<img src="images/wireframe1.png" alt="deskstop wireframe sketch">
