--- a/e5/index.html
+++ b/e5/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 	<body>
-		<img src="images/wireframe1.png" alt="deskstop wireframe sketch">
-		<img src="images/wireframe2.png" alt="mobile wireframe sketch">
+		<img src="images/wireframe1.PNG" alt="deskstop wireframe sketch">
+		<img src="images/wireframe2.PNG" alt="mobile wireframe sketch">
 	</body>
 </html>
