--- a/p1/page3/index.html
+++ b/p1/page3/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Project 1</title>
+		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
 		<p>Turning tree stumps into <a href="../page4/index.html">snowmen</a></p>
