--- a/p1/page5/index.html
+++ b/p1/page5/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Project 1</title>
+		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
 		<p>And spreading sugar over <a href="../page6/index.html">lakes</a></p>
