--- a/p1/index.html
+++ b/p1/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Project 1</title>
+		<title>P1: Winter Morning Poem</title>
+		<link rel="stylesheet" href="https://use.typekit.net/nbr4czt.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
