--- a/p1/page11/index.html
+++ b/p1/page11/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Project 1</title>
+		<link rel="stylesheet" href="https://use.typekit.net/nbr4czt.css">
+		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
 		<p>I’m sorry it’s slushy when it’s <a href="../page2/index.html">going</a></p>
