--- a/p1/page7/index.html
+++ b/p1/page7/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Project 1</title>
+		<link rel="stylesheet" href="https://use.typekit.net/nbr4czt.css">
+		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
 		<p>The world looks good enough to <a href="../page8/index.html">bite.</a></p>
