--- a/p1/page9/index.html
+++ b/p1/page9/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Project 1</title>
+		<link rel="stylesheet" href="https://use.typekit.net/nbr4czt.css">
+		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
 		<p>Catching snowflakes on your <a href="../page10/index.html">tongue!</a></p>
