--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Camille Koslo</title>
-	<link rel="stylesheet" href="css/main.css">
-</head>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Camille Koslo</title>
+		<link rel="stylesheet" href="css/main.css">
+	</head>
 	<body>
 		<h1>Camille's Work</h1>
 		<h2>Exercises</h2>
@@ -16,7 +16,8 @@
 			<li><a href="e4/index.html">E4: Site Map</a></li>
 			<li><a href="e5/index.html">E5: Wireframes</a></li>
 			<li><a href="e6/index.html">E6: Type on Screen 1</a></li>
-			<li><a href="e7/index.html">E7: Seven Principles </a></li>
+			<li><a href="e7/index.html">E7: Seven Principles</a></li>
+			<li><a href="e8/index.html">E8: Visualizing Responsiveness</a></li>
 		</ul>
 		<h2>Projects</h2>
 		<ul>
