--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<h2>Projects</h2>
 		<ul>
 			<li><a href="p1/index.html">P1: Linking Narratives</a></li>
+			<li><a href="p2/index.html">P2: Website for a [Blank]</li>
 		</ul>
 	</body>
 </html>
