--- a/p2/mobileDesign/index.html
+++ b/p2/mobileDesign/index.html
@@ -6,10 +6,15 @@
 		<title>P2: Mobile Designs</title>
 	</head>
 	<body>
+		<h2>Homepage</h2>
 		<img src="../images/mobileDesign-1.png" alt="Pines of Nowhere Homepage">
-		<img src="../images/mobileDesign-2.png" alt="Pines of Nowhere Sandwich Menu">
+		<h2>Hamburger Menu</h2>
+		<img src="../images/mobileDesign-2.png" alt="Pines of Nowhere Hamburger Menu">
+		<h2>Food Menu</h2>
 		<img src="../images/mobileDesign-3.png" alt="Pines of Nowhere Food Menu">
+		<h2>About us Page</h2>
 		<img src="../images/mobileDesign-4.png" alt="Pines of Nowhere About Us Page">
+		<h2>Events Page</h2>
 		<img src="../images/mobileDesign-5.png" alt="Pines of Nowhere Events Page">
 	</body>
 </html>
