--- a/index.html
+++ b/index.html
@@ -4,26 +4,36 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Camille Koslo</title>
+		<link rel="stylesheet" href="https://use.typekit.net/ynt4aca.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
-		<h1>Camille's Work</h1>
-		<h2>Exercises</h2>
-		<ul>
-			<li><a href="e1/index.html">E1: 20 Questions</a></li>
-			<li><a href="e2/index.html">E2: Make a Grid</a></li>
-			<li><a href="e3/index.html">E3: Organization and Naming</a></li>
-			<li><a href="e4/index.html">E4: Site Map</a></li>
-			<li><a href="e5/index.html">E5: Wireframes</a></li>
-			<li><a href="e6/index.html">E6: Type on Screen 1</a></li>
-			<li><a href="e7/index.html">E7: Seven Principles</a></li>
-			<li><a href="e8/index.html">E8: Visualizing Responsiveness</a></li>
-			<li><a href="e9/index.html">E9: Patterns</a></li>
-		</ul>
-		<h2>Projects</h2>
-		<ul>
-			<li><a href="p1/index.html">P1: Linking Narratives</a></li>
-			<li><a href="p2/index.html">P2: Website for a [Blank]</li>
-		</ul>
-	</body>
-</html>
+		<header>
+			<h1>Camille's Work</h1>
+		</header>
+		<main>
+			<div class="col">
+				<h2>Exercises</h2>
+				<ul>
+					<li><a href="e1/index.html">E1: 20 Questions</a></li>
+					<li><a href="e2/index.html">E2: Make a Grid</a></li>
+					<li><a href="e3/index.html">E3: Organization and Naming</a></li>
+					<li><a href="e4/index.html">E4: Site Map</a></li>
+					<li><a href="e5/index.html">E5: Wireframes</a></li>
+					<li><a href="e6/index.html">E6: Type on Screen 1</a></li>
+					<li><a href="e7/index.html">E7: Seven Principles</a></li>
+					<li><a href="e8/index.html">E8: Visualizing Responsiveness</a></li>
+					<li><a href="e9/index.html">E9: Patterns</a></li>
+					<li><a href="studio-level2/index.html">Linking</a></li>
+				</ul>
+			</div>
+			<div class="col">
+				<h2>Projects</h2>
+				<ul>
+					<li><a href="p1/index.html">P1: Linking Narratives</a></li>
+					<li><a href="p2/index.html">P2: Website for a [Blank]</li>
+				</ul>
+			</div>
+		</main>
+	</body
+</html> 
