--- a/p2/index.html
+++ b/p2/index.html
@@ -8,7 +8,9 @@
 <body>
 	<h1>P2 Checkpoints</h1>
 	<ul>
-		<li><a href="mobileDesign/index.html">Mobile Designs<a></li>
+		<li><a href="mobileDesign/index.html">P2.3: Mobile Designs<a></li>
+		<li><a href="mobileRedesign/index.html">P2.3: Mobile Re-Designs<a></li>
+		<li><a href="1440Design/index.html">P2.4: 1440px Designs<a></li>
 	</ul>
 </body>
 </html>
