--- a/p2/1440Design/index.html
+++ b/p2/1440Design/index.html
@@ -6,6 +6,7 @@
 		<title>P2: Mobile Designs</title>
 	</head>
 	<body>
+		<h1>1440px Designs</h1>
 		<h2>Homepage</h2>
 		<img src="../images/1440Design-1.png" alt="Pines of Nowhere Homepage">
 		<h2>Food Menu</h2>
@@ -14,5 +15,16 @@
 		<img src="../images/1440Design-3.png" alt="Pines of Nowhere About Us Page">
 		<h2>Events Page</h2>
 		<img src="../images/1440Design-4.png" alt="Pines of Nowhere Events Page">
+		<h1>Mobile Redesigns</h1>
+		<h2>Homepage</h2>
+		<img src="../images/mobileRedesign-1.png" alt="Pines of Nowhere Homepage">
+		<h2>Hamburger Menu</h2>
+		<img src="../images/mobileRedesign-2.png" alt="Pines of Nowhere Hamburger Menu">
+		<h2>Food Menu</h2>
+		<img src="../images/mobileRedesign-3.png" alt="Pines of Nowhere Food Menu">
+		<h2>About us Page</h2>
+		<img src="../images/mobileRedesign-4.png" alt="Pines of Nowhere About Us Page">
+		<h2>Events Page</h2>
+		<img src="../images/mobileRedesign-5.png" alt="Pines of Nowhere Events Page">
 	</body>
 </html>
