e10 - the code is a mess but I did it. I'm sorry if you have to read through it all

--- a/e10/index.html
+++ b/e10/index.html
@@ -13,6 +13,7 @@
 			<li><a href="colgrid/index.html">Column Grid</a></li>
 			<li><a href="bloglayout/index.html">Blog Layout</a></li>
 			<li><a href="tenniscourt/index.html">Tennis Court</a></li>
+			<li><a href="calcase/index.html">California Case</a></li>
 		</ul>
 	</body>
 </html>
