--- a/e10/tenniscourt/index.html
+++ b/e10/tenniscourt/index.html
@@ -7,24 +7,29 @@
 		<link rel="stylesheet" type="text/css" href="../css/main.css">
 	</head>
 	<body>
-		<div id="tenniscontainer"></div>
+		<div id="tenniscontainer">
 			<div class="topcontainer">
 					<div class="longrect-1"></div>
 					<div class="horzrect"></div>
 					<div class="longrect-1"></div>
+				<div class="secondcontainer">
 					<div class="longrect-2"></div>
 					<div class="tennissquare"></div>
 					<div class="tennissquare"></div>
 					<div class="longrect-2"></div>
+				</div>
 			</div>	
 			<div class="bottomcontainer">
 					<div class="bottomlongrect-2"></div>
 					<div class="bottomtennissquare-3"></div>
 					<div class="bottomtennissquare-3"></div>
 					<div class="bottomlongrect-2"></div>
+				<div class="fourthcontainer">
 					<div class="longrect-1"></div>
 					<div class="horzrect"></div>
 					<div class="longrect-1"></div>		
+				</div>
 			</div>
+		</div>
 	</body>
 </html>
