--- a/e10/index.html
+++ b/e10/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<h1>Exercise 10</h1>
 		<ul>
-			<li><a href="Checkerboard/index.html">Checkerboard</a></li>
+			<li><a href="checkerboard/index.html">Checkerboard</a></li>
 			<li><a href="colgrid/index.html">Column Grid</a></li>
 			<li><a href="bloglayout/index.html">Blog Layout</a></li>
 			<li><a href="tenniscourt/index.html">Tennis Court</a></li>
