--- a/p2/index.html
+++ b/p2/index.html
@@ -11,6 +11,7 @@
 		<li><a href="mobileDesign/index.html">P2.3: Mobile Designs<a></li>
 		<li><a href="mobileRedesign/index.html">P2.3: Mobile Re-Designs<a></li>
 		<li><a href="1440Design/index.html">P2.4: 1440px Designs<a></li>
+		<li><a href="furtherRefinements/index.html">P2.5: Further Refinements<a></li>
 	</ul>
 </body>
 </html>
