--- a/p2/1440Design/index.html
+++ b/p2/1440Design/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>P2: Mobile Designs</title>
+		<title>P2: 1440px Designs</title>
 	</head>
 	<body>
 		<h1>1440px Designs</h1>
