--- a/p2/index.html
+++ b/p2/index.html
@@ -12,6 +12,7 @@
 		<li><a href="mobileRedesign/index.html">P2.3: Mobile Re-Designs<a></li>
 		<li><a href="1440Design/index.html">P2.4: 1440px Designs<a></li>
 		<li><a href="furtherRefinements/index.html">P2.5: Further Refinements<a></li>
+		<li><a href="final/index.html">P2: Final<a></li>
 	</ul>
 </body>
 </html>
