--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 				<ul>
 					<li><a href="p1/index.html">P1: Linking Narratives</a></li>
 					<li><a href="p2/index.html">P2: Website for a [Blank]</li>
+					<li><a href="p3/index.html">P3: Prototype Project</li>
 				</ul>
 			</div>
 		</main>
