--- a/p3/index.html
+++ b/p3/index.html
@@ -10,6 +10,7 @@
 	<ul>
 		<li><a href="https://xd.adobe.com/view/02895f1e-5420-48fa-90bb-22e44cf5e3ae-57da/">P3.1: Checkpoint 1<a></li>
 		<li><a href="https://xd.adobe.com/view/02895f1e-5420-48fa-90bb-22e44cf5e3ae-57da/">P3.2: Checkpoint 2<a></li>
+		<li><a href="https://xd.adobe.com/view/02895f1e-5420-48fa-90bb-22e44cf5e3ae-57da/">P3: Final<a></li>
 	</ul>
 </body>
 </html>
