--- a/e15/index.html
+++ b/e15/index.html
@@ -20,7 +20,7 @@
 		<li>THIS OBJECT HAS COLOR. Use the polygon tool (Y) on the left side of the screen and draw a Triangle. Measurements of Width 206 x Height 179. The position of this triangle is X=1234.91 Y=103.38. There is a rotation of 45 degrees. The fill color is #FF0000 with a size 1 boarder and color of #707070</li> 
 		<li>Save and then</li>
 		<li>Export as .png</li> 
-		<li>Email to Micheal</li>
+		<li>Email to ckoslo@gmu.edu</li>
 	</ul>
 </body>
 </html>
