--- a/e15/index.html
+++ b/e15/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>E15</title>
+	<title>E15: Programmer and Computer</title>
 </head>
 <body>
+	<h2>Instructions</h2>
 	<ul>
 		<li>Open Xd</li>
 		<li>Have an Artboard at the size of Width 1920 X Height 1080</li> 
@@ -22,5 +23,11 @@
 		<li>Export as .png</li> 
 		<li>Email to ckoslo@gmu.edu</li>
 	</ul>
+	<h2>Original Drawing</h2>
+	<img src="images/e15-1.png" alt="Original Image">
+	<h2>Esther's Drawing</h2>
+	<img src="images/e15-2.png" alt="Original Image">
+	<h2>Ayman's Drawing</h2>
+	<img src="images/e15-3.png" alt="Original Image">
 </body>
 </html>
